--- a/test-payment.html
+++ b/test-payment.html
@@ -290,7 +290,7 @@ Total: $${(pricing.total / 100).toFixed(2)}
                         <ol>
                             <li>Add real Stripe test keys to .env for frontend testing</li>
                             <li>Test the complete payment flow in the frontend UI</li>
-                            <li>Configure webhook endpoints for production</li>
+                            <li>Monitor payments in Stripe dashboard</li>
                         </ol>
                     </div>
                 `;
